# Spark

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: ClangTidy.cmake
spark/: CMakeLists.txt
spark/include/spark/: version.h
spark/include/spark/core/: application.h
spark/src/: main.cpp
spark/src/core/: application.cpp
spark/tests/: main.cpp
